--- a/src/views.properties
+++ b/src/views.properties
@@ -1,5 +1,5 @@
 welcome.(class)=org.springframework.web.servlet.view.tiles2.TilesView
-welcome.url=welcome
+welcome.url=welcome.do
 
 homePage.(class)=org.springframework.web.servlet.view.tiles2.TilesView
 homePage.url=homePage
